--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,7 @@
                 </span>
                 <span>
                     {% if request.user.is_authenticated %}
+                        <a>User: {{user.username}}</a>
                         <a href={% url 'exit' %}><button type="button" class="btn btn-info">Log Out</button></a>
                     {% else %}
                         <a href={% url 'register' %}><button type="button" class="btn btn-info">Register</button></a>
