--- a/templates/create.html
+++ b/templates/create.html
@@ -4,8 +4,19 @@
 <div class="container">
     <form method="POST" action="/create/">
         {% csrf_token %}
-        {{ form.as_p }}
-        <center><button type="submit" class="btn btn-success">Create URL:</button></center>
+            <h2>Original URL</h2>
+            {{ form.original_url }}
+            <a>Private URL</a>
+            {{ form.private }}
+        <center><button type="submit" class="btn btn-success">URL Shortener</button></center>
     </form>
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-danger">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endif %}
 </div>
+
 {% endblock content %}
