--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -8,11 +8,8 @@
         <form action="" method="post">
             <h1>Log In</h1>
             {% csrf_token %}
-                <a><input type="username" name="username" id="" placeholder="Email"></a>
-                <br>
-                <a><input type="password" name="password" id="" placeholder="Password"></a>
-                <br>
-                <a><button class="btn btn-secundary" type="submit">Log In</button></a>
+                {{ form.as_p }}
+                <a><button class="btn btn-info" type="submit">Log In</button></a>
         </form>
     </center>
 </div>
