API and final details

--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,15 @@
         <a href="/upload/"><button type="button" class="btn btn-secondary">Submit a .txt File</button></a>
     </center>
 </div>
-
+<center>
+{% if messages %}
+    {% for message in messages %}
+        <div class="alert alert-danger">
+            {{ message }}
+        </div>
+    {% endfor %}
+{% endif %}
+</center>
     </center>
 </div>
 {% endblock content %}
