--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -13,7 +13,15 @@
         </form>
     </center>
 </div>
-
+<center>
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-danger">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endif %}
+</center>
     </center>
 </div>
 {% endblock content %}
